Fixes for componentImagePlugin

--- a/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
@@ -767,7 +767,7 @@ spec:
       initContainers:
       - name: egress-gateway-init
         command: ["/init-gateway.sh"]
-        image: {{registry}}{% component_image("egress-gateway") %}
+        image: {{registry}}%% component_image("egress-gateway") %%
         env:
         - name: EGRESS_POD_IP
           valueFrom:
@@ -784,7 +784,7 @@ spec:
       containers:
       - name: egress-gateway
         command: ["/start-gateway.sh"]
-        image: {{registry}}{% component_image("egress-gateway") %}
+        image: {{registry}}%% component_image("egress-gateway") %%
         env:
          # Optional: comma-delimited list of IP addresses to send ICMP pings to; if all probes fail, the egress
          # gateway will report non-ready.
