--- a/calico-enterprise_versioned_docs/version-3.16/operations/clis/calicoq/installing.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/operations/clis/calicoq/installing.mdx
@@ -88,7 +88,7 @@ corresponds to your desired deployment.
    registry.
 
    ```bash
-   docker pull {{registry}}{% component_image("calicoq") %}
+   docker pull {{registry}}%% component_image("calicoq") %%
    ```
 
 1. Confirm that the image has loaded by typing `docker images`.
