--- a/calico-cloud_versioned_docs/version-18/reference/resources/containeradmissionpolicy.mdx
+++ b/calico-cloud_versioned_docs/version-18/reference/resources/containeradmissionpolicy.mdx
@@ -139,7 +139,7 @@ is present then the rule's `selector` matches the default scope for that type of
 for `NetworkPolicy` and all endpoints/network sets for `GlobalNetworkPolicy`)
 
 * The `global()` operator can be used (only) in a `namespaceSelector` to change the scope of the main `selector` to
-include non-namespaced resources such as [GlobalNetworkSet]({{ site.baseurl }}/reference/resources/globalnetworkset).
+include non-namespaced resources such as [GlobalNetworkSet](globalnetworkset.mdx).
 This allows namespaced `NetworkPolicy` resources to refer to global non-namespaced resources, which would otherwise
 be impossible.
 
