--- a/calico-enterprise_versioned_docs/version-3.18-2/_includes/content/_entityrule.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/_includes/content/_entityrule.mdx
@@ -1,3 +1,5 @@
+import DomainNames from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/content/_domain-names.mdx';
+
 Entity rules specify the attributes of the source or destination of a packet that must match for the rule as a whole
 to match. Packets can be matched on combinations of:
 
