--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -19,13 +19,8 @@ Scrape {{prodname}} metrics for Bring Your Own (BYO) Prometheus.
 - fluentd
 - calico-node
 - kube-controllers
-- felix
-- typha
-
-To use BYO Prometheus, you must create your own:
-
-- Service monitors
-- Alerts
+- felix (not enabled by default)
+- typha (not enabled by default)
 
 :::note
 
@@ -41,11 +36,57 @@ For the supported version of Prometheus in this release, see the [Release Notes]
 
 ## How to
 
-- [Scrape metrics](#scrape-metrics)
+- [Scrape metrics from specific components](#scrape-all-enabled-metrics)
+- [Scrape metrics from specific components](#scrape-metrics-from-specific-components)
 - [Verify BYO Prometheus](#verify-byo-prometheus)
 - [Create policy to secure traffic between pods](#create-policy-to-secure-traffic-between-pods)
 
-### Scrape metrics
+### Scrape all enabled metrics
+
+{{prodname}} has a feature that will create a service monitor that will scrape all enabled metrics. To enable metrics that
+are not enabled by default, please consult the [next subchapter](#scrape-metrics-from-specific-components).
+
+This example illustrates a Prometheus server installed in namespace "external-prometheus" with a `serviceMonitorSelector`
+that selects all service monitors with label `k8s-app=tigera-external-prometheus`.
+
+1. Save the following configuration in a file called `monitor.yaml`.
+
+    ```
+    apiVersion: operator.tigera.io/v1
+    kind: Monitor
+    metadata:
+      name: tigera-secure
+    spec:
+      externalPrometheus:
+        namespace: external-prometheus
+        serviceMonitor:
+          labels:
+            k8s-app: tigera-prometheus
+    ```
+    For a list of all configuration options, see the [Installation API reference](../../../reference/installation/api.mdx).
+
+2. Apply the manifest to your cluster.
+
+    ```bash
+    kubectl applf -f monitor.yaml
+    ```
+
+3. Verify that the new configuration has been added to your cluster
+    ```bash
+    export NS=external-prometheus
+    kubectl get servicemonitor -n $NS tigera-external-prometheus
+    kubectl get serviceaccount -n $NS tigera-external-prometheus
+    kubectl get secret -n $NS tigera-external-prometheus
+    kubectl get clusterrole tigera-external-prometheus
+    kubectl get clusterrolebinding tigera-external-prometheus
+    ```
+    That's it. You should be seeing the new metrics show up in your prometheus within one minutes. For more information
+    on verifying metrics, scroll down to the [Verify BYO Prometheus](#verify-byo-prometheus) section.
+
+### Scrape metrics from specific components
+
+We recommend the previous chapter for scraping all enabled metrics. Read on if you wish to scrape metrics from specific
+components, or if you wish to enable metrics that are disabled by default.
 
 <Tabs>
 <TabItem label="elasticsearch" value="elasticsearch-0">
@@ -357,7 +398,7 @@ The .yamls have no namespace defined so when you apply `kubectl`, it is applied 
 </TabItem>
   </Tabs>
 
-## Verify BYO Prometheus
+### Verify BYO Prometheus
 
 **Verify metrics in the Prometheus console**
 
@@ -411,6 +452,6 @@ The .yamls have no namespace defined so when you apply `kubectl`, it is applied 
 
 You should be able to see the metrics.
 
-## Create policy to secure traffic between pods
+### Create policy to secure traffic between pods
 
 To support zero trust, we recommend that you create {{prodname}} network policy to allow the traffic between BYO Prometheus pods, and the respective metrics pods. For samples of ingress and egress policies, see [Get started with Calico network policy](../../../network-policy/beginners/calico-network-policy.mdx).
