--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -51,7 +51,7 @@ that selects all service monitors with label `k8s-app=tigera-external-prometheus
 
 1. Save the following configuration in a file called `monitor.yaml`.
 
-    ```
+    ```yaml
     apiVersion: operator.tigera.io/v1
     kind: Monitor
     metadata:
