--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -80,7 +80,7 @@ that selects all service monitors with label `k8s-app=tigera-external-prometheus
     kubectl get clusterrole tigera-external-prometheus
     kubectl get clusterrolebinding tigera-external-prometheus
     ```
-    That's it. You should be seeing the new metrics show up in your prometheus within one minutes. For more information
+    That's it. You should be seeing the new metrics show up in your Prometheus instance within a minute. For more information on verifying metrics, see the section, [Verify BYO Prometheus](#verify-byo-prometheus).
     on verifying metrics, scroll down to the [Verify BYO Prometheus](#verify-byo-prometheus) section.
 
 ### Scrape metrics from specific components
