--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -46,7 +46,7 @@ For the supported version of Prometheus in this release, see the [Release Notes]
 {{prodname}} has a feature that will create a service monitor that will scrape all enabled metrics. To enable metrics that
 are not enabled by default, please consult the [next subchapter](#scrape-metrics-from-specific-components).
 
-This example illustrates a Prometheus server installed in namespace "external-prometheus" with a `serviceMonitorSelector`
+The following example shows a Prometheus server installed in namespace "external-prometheus" with a `serviceMonitorSelector` that selects all service monitors with the label `k8s-app=tigera-external-prometheus`.
 that selects all service monitors with label `k8s-app=tigera-external-prometheus`.
 
 1. Save the following configuration in a file called `monitor.yaml`.
