Correct PR suggestion

--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -47,7 +47,6 @@ For the supported version of Prometheus in this release, see the [Release Notes]
 are not enabled by default, please consult the [next subchapter](#scrape-metrics-from-specific-components).
 
 The following example shows a Prometheus server installed in namespace "external-prometheus" with a `serviceMonitorSelector` that selects all service monitors with the label `k8s-app=tigera-external-prometheus`.
-that selects all service monitors with label `k8s-app=tigera-external-prometheus`.
 
 1. Save the following configuration in a file called `monitor.yaml`.
 
@@ -68,7 +67,7 @@ that selects all service monitors with label `k8s-app=tigera-external-prometheus
 2. Apply the manifest to your cluster.
 
     ```bash
-    kubectl applf -f monitor.yaml
+    kubectl apply -f monitor.yaml
     ```
 
 3. Verify that the new configuration has been added to your cluster
@@ -81,7 +80,6 @@ that selects all service monitors with label `k8s-app=tigera-external-prometheus
     kubectl get clusterrolebinding tigera-external-prometheus
     ```
     That's it. You should be seeing the new metrics show up in your Prometheus instance within a minute. For more information on verifying metrics, see the section, [Verify BYO Prometheus](#verify-byo-prometheus).
-    on verifying metrics, scroll down to the [Verify BYO Prometheus](#verify-byo-prometheus) section.
 
 ### Scrape metrics from specific components
 
