Correct PR suggestion

--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -19,7 +19,7 @@ Scrape {{prodname}} metrics for Bring Your Own (BYO) Prometheus.
 - fluentd
 - calico-node
 - kube-controllers
-- felix (not enabled by default)
+- felix
 - typha (not enabled by default)
 
 :::note
@@ -43,8 +43,8 @@ For the supported version of Prometheus in this release, see the [Release Notes]
 
 ### Scrape all enabled metrics
 
-{{prodname}} has a feature that will create a service monitor that will scrape all enabled metrics. To enable metrics that
-are not enabled by default, please consult the [next subchapter](#scrape-metrics-from-specific-components).
+In this section we create a service monitor that scrapes all enabled metrics. To enable metrics that
+are not enabled by default, please consult the [next section](#scrape-metrics-from-specific-components).
 
 The following example shows a Prometheus server installed in namespace "external-prometheus" with a `serviceMonitorSelector` that selects all service monitors with the label `k8s-app=tigera-external-prometheus`.
 
@@ -83,7 +83,7 @@ The following example shows a Prometheus server installed in namespace "external
 
 ### Scrape metrics from specific components
 
-We recommend the previous chapter for scraping all enabled metrics. Read on if you wish to scrape metrics from specific
+We recommend the previous section for scraping all enabled metrics. Read on if you wish to scrape metrics from specific
 components, or if you wish to enable metrics that are disabled by default.
 
 <Tabs>
