Correct PR suggestion

--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -60,7 +60,7 @@ The following example shows a Prometheus server installed in namespace "external
         namespace: external-prometheus
         serviceMonitor:
           labels:
-            k8s-app: tigera-prometheus
+            k8s-app: tigera-external-prometheus
     ```
     For a list of all configuration options, see the [Installation API reference](../../../reference/installation/api.mdx).
 
