DOCS-2015: Prepare Cloud 18.2 publication branch and RN

--- a/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
@@ -5,6 +5,14 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## December 20, 2023 (version 18.2.0)
+
+### New features and enhancements
+
+### Known issues
+
+### Bug fixes
+
 ## November 29, 2023 (version 18.1.0)
 
 ### New features and enhancements
