--- a/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
@@ -9,7 +9,16 @@ title: Release notes
 
 ### New features and enhancements
 
+#### Support for RKE2
+
+This release comes with support for connecting RKE2 clusters to Calico Cloud.
+
+For more information, see the [requirements for RKE2](../get-started/connect/requirements/rke2.mdx)
+
 ### Known issues
+
+* You can't connect RKE2 clusters to Calico Cloud if you enabled the Image Assurance runtime view feature on any of your managed clusters.
+  As a workaround, disable runtime view before connecting your RKE2 cluster.
 
 ### Bug fixes
 
