--- a/calico-enterprise_versioned_docs/version-3.17/multicluster/change-cluster-type.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/multicluster/change-cluster-type.mdx
@@ -171,10 +171,9 @@ If you wish to retain LogStorage data for your managed cluster, verify that the 
 
    :::
 
-   Follow the following step to also disconnect your managed cluster from your management cluster. This will not result in any
-   data loss. If you reconnect your cluster using the same name, existing data will be available again.
+   Follow the following step to also disconnect your managed cluster from your management cluster.
 
-   1. In your management cluster, delete the `ManagedCluster` resource for your managed cluster.
+   1. In your management cluster, delete the `ManagedCluster` resource for your managed cluster. Note that deleting the managed cluster does not result in loss of data. Whenever you reconnect your cluster using the same name, existing data is available again.
    ```bash
    kubectl delete managedcluster <managed-cluster-name>
    ```
