--- a/calico-enterprise/multicluster/change-cluster-type.mdx
+++ b/calico-enterprise/multicluster/change-cluster-type.mdx
@@ -171,6 +171,13 @@ If you wish to retain LogStorage data for your managed cluster, verify that the 
 
    :::
 
+   Follow the following step to also disconnect your managed cluster from your management cluster.
+
+   1. In your management cluster, delete the `ManagedCluster` resource for your managed cluster. Note that deleting the managed cluster does not result in loss of data. Whenever you reconnect your cluster using the same name, existing data is available again.
+   ```bash
+   kubectl delete managedcluster <managed-cluster-name>
+   ```
+
 1. Install the Tigera custom resources.
    For more information, see [the installation reference](../reference/installation/api.mdx).
    ```bash
