Distinguishes 3.18 features by early preview release

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -7,7 +7,14 @@ title: Release notes
 
 Learn about the new features, bug fixes, and other updates in this release of {{prodname}}.
 
-## New features and enhancements
+:::info early preview release
+
+Calico Enterprise 3.18 can be used for previewing and testing purposes only.
+It is not supported for use in production.
+
+:::
+
+## New features and enhancements (early preview 2)
 
 ### VXLAN support for cluster mesh and federation
 
@@ -54,6 +61,8 @@ For more information, see [Selector performance in EntityRules](../reference/res
 ### Improved scalability for large number of policies when using the eBPF dataplane
 
 We've made several improvements that allow you to enforce a larger number of {{prodname}} network policies when using the eBPF dataplane.
+
+## New features and enhancements (early preview 1)
 
 ### New performance optimizations for egress gateways
 
