Add-RN-3.19/ep1

--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -3,11 +3,11 @@ description: What's new, and why features provide value for upgrading.
 title: Release notes
 ---
 
-# Calico Enterprise 3.18 release notes
+# Calico Enterprise 3.19 release notes
 
 :::info early preview release
 
-Calico Enterprise 3.18 can be used for previewing and testing purposes only.
+Calico Enterprise 3.19 can be used for previewing and testing purposes only.
 It is not supported for use in production.
 
 :::
@@ -16,69 +16,10 @@ Learn about the new features, bug fixes, and other updates in this release of {{
 
 ## New features and enhancements
 
-### New flow logs panel for the Endpoints page
+### Improved flow log filtering for destination domains
 
-We've add a link to view flow logs for a selected endpoint on the Endpoints page in Manager UI.
-
-### Security event management
-
-We've added a new Security event management dashboard for threat detection.
-Security events provides context for suspicious activity detected in your cluster.
-Combined with the Kubernetes context, you can see what workloads are affected.
-
-For more information, see [Security event management](../threat/security-event-management).
-
-### New performance optimizations for egress gateways
-
-{{prodname}} includes new performance options for egress gateway policies that can be used to ensure that application client and gateway pods are on the same cluster node.
-
-For more information, see [Optimize egress networking for workloads with long-lived TCP connections](../networking/egress/egress-gateway-maintenance).
-
-### Configurable XFF headers for Envoy
-
-We've added support for XFF to propagate the original IP address when proxying application layer traffic with Envoy within a Kubernetes cluster.
-
-For more information, see [Installation reference](../reference/installation/api#operator.tigera.io/v1.EnvoySettings).
-
-### Alert-only mode for Workload-based Web Application Firewall (WAF)
-
-We've added a new default mode for WAF that is monitor/event only.
-This allows operators and security teams to verify the accuracy of configured rules before actively blocking traffic.
-
-For more information, see [Web application firewall](../threat/web-application-firewall).
-
-### Additional options for Helm-based installs
-
-We've added new options for Helm installs including: set the number of replicas for specific deployments, node affinity rules, and configure Wireguard.
-
-For more information, see [Helm installation reference](../reference/installation/helm_customization).
-
-<!-- BELOW ARE 3.18 EP2 features -->
-
-### Support for Kubernetes v1.28
-
-To see the Kubernetes version supported for your platform by release, see [Support and compatibility](../getting-started/compatibility).
-
-### VXLAN encapsulation for cross-cluster connectivity
-
-Added support for VXLAN overlay networking to federated endpoint identity and services. Using VXLAN overlay networking alleviates the work of configuring routable pod CIDRs for cross-cluster connectivity, and provides a solution if IPs are exhausted. {{prodname}} uses the VXLAN overlay network to establish pod CIDR routes to remote nodes.
-
-For more information, see [Configure federated endpoint identity and services](../multicluster/federation/kubeconfig).
-
-### Helm installation and upgrade for multi-cluster management deployments
-
-We've added the option to use Helm to install and upgrade if you are using the multi-cluster management feature. With Helm, your DevOps teams can automate these complex deployments more easily.
-
-For more information, see [Helm for multi-cluster management](../multicluster/set-up-multi-cluster-management/standard-install/).
-
-### Support for Azure CNI with overlay networking for AKS
-
-We've added supported for Azure CNI with overlay networking for AKS clusters, which is useful if you've exhausted your IP addresses.
-This option augments support for the Azure CNI with no overlay (where a VNET IP address is assigned to every pod).
-
-To review Azure CNI options, see [Microsoft Azure Kubernetes Service (AKS)](../getting-started/install-on-clusters/aks).
-
-<!-- We can break this up by component. H3 subheads or additions to titles -->
+We’ve updated the Felix parameter (`dest_domains`) to make it easy to find only domain names that the deployment actually connected to (not all the domain names that got translated to the same IP address), for use in a DNS policy.
+For more information, see [Flow log data types](../visibility/elastic/flow/datatypes.mdx).
 
 ### Deprecated and removed features
 
@@ -119,9 +60,9 @@ For more information, see [link](https://docs.tigera.io).
 
 ## Release details
 
-### Calico Enterprise 3.18.0 (early preview)
+### Calico Enterprise 3.19.0 (early preview)
 
-1 September 2023
+DD M YYYY
 
 Calico Enterprise 3.18.0 is now available as an early preview release.
 This release is for previewing and testing purposes only.
