Remove early preview

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -7,14 +7,7 @@ title: Release notes
 
 Learn about the new features, bug fixes, and other updates in this release of {{prodname}}.
 
-:::info early preview release
-
-Calico Enterprise 3.18 can be used for previewing and testing purposes only.
-It is not supported for use in production.
-
-:::
-
-## New features and enhancements (early preview 2)
+## New features and enhancements
 
 ### VXLAN support for cluster mesh and federation
 
@@ -61,8 +54,6 @@ For more information, see [Selector performance in EntityRules](../reference/res
 ### Improved scalability for large number of policies when using the eBPF dataplane
 
 We've made several improvements that allow you to enforce a larger number of {{prodname}} network policies when using the eBPF dataplane.
-
-## New features and enhancements (early preview 1)
 
 ### New performance optimizations for egress gateways
 
@@ -145,5 +136,13 @@ Calico Enterprise 3.18.0-2-0 is now available as an early preview release.
 This release is for previewing and testing purposes only.
 It is not supported for use in production.
 This release includes improvements and bug fixes.
+
+### Calico Enterprise 3.18.1 GA
+
+January 17, 2024
+
+Calico Enterprise 3.18.1 is now available as a GA release.
+
+This release is supported for use in production.
 
 To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
