Fix textual copy-paste bug

--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -36,7 +36,7 @@ For the supported version of Prometheus in this release, see the [Release Notes]
 
 ## How to
 
-- [Scrape metrics from specific components](#scrape-all-enabled-metrics)
+- [Scrape all enabled metrics](#scrape-all-enabled-metrics)
 - [Scrape metrics from specific components](#scrape-metrics-from-specific-components)
 - [Verify BYO Prometheus](#verify-byo-prometheus)
 - [Create policy to secure traffic between pods](#create-policy-to-secure-traffic-between-pods)
