Markdown heading fix

--- a/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
@@ -9,7 +9,7 @@ title: Release notes
 
 ### New features and enhancements
 
-### Security Posture Overview dashboard
+#### Security Posture Overview dashboard
 
 We've added a new Security Posture Overview dashboard that helps you assess the security posture of your cluster.
 Using a list of prioritized recommended actions, you can start to take steps to reduce your risk over time.
