[calico-8364] Update calicoctl binary command
Remove the leading '/' from the 'calicoctl' command when running it as a
pod, due to the calicoctl container being updated in
https://github.com/projectcalico/calico/pull/8364

--- a/calico-enterprise/operations/clis/calicoctl/install.mdx
+++ b/calico-enterprise/operations/clis/calicoctl/install.mdx
@@ -302,7 +302,7 @@ You can also [view the YAML in a new tab]({{filesUrl}}/manifests/calicoctl.yaml)
 You can then run commands using kubectl as shown below.
 
 ```bash
-kubectl exec -ti -n kube-system calicoctl -- /calicoctl get profiles -o wide
+kubectl exec -ti -n kube-system calicoctl -- calicoctl get profiles -o wide
 ```
 
 An example response follows.
@@ -316,7 +316,7 @@ kns.kube-system      kns.kube-system
 We recommend setting an alias as follows.
 
 ```bash
-alias calicoctl="kubectl exec -i -n kube-system calicoctl -- /calicoctl"
+alias calicoctl="kubectl exec -i -n kube-system calicoctl -- calicoctl"
 ```
 
 :::note
