--- a/calico/operations/calicoctl/install.mdx
+++ b/calico/operations/calicoctl/install.mdx
@@ -439,7 +439,7 @@ Use the YAML that matches your datastore type to deploy the `calicoctl` containe
 You can then run commands using kubectl as shown below.
 
 ```bash
-kubectl exec -ti -n kube-system calicoctl -- /calicoctl get profiles -o wide
+kubectl exec -ti -n kube-system calicoctl -- calicoctl get profiles -o wide
 ```
 
 An example response follows.
@@ -453,7 +453,7 @@ kns.kube-system      kns.kube-system
 We recommend setting an alias as follows.
 
 ```bash
-alias calicoctl="kubectl exec -i -n kube-system calicoctl -- /calicoctl"
+alias calicoctl="kubectl exec -i -n kube-system calicoctl -- calicoctl"
 ```
 
 :::note
