--- a/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
@@ -5,6 +5,35 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## December 21, 2023 (version 18.2.0)
+
+### New features and enhancements
+
+#### Security Posture Overview dashboard
+
+We've added a new Security Posture Overview dashboard that helps you assess the security posture of your cluster.
+Using a list of prioritized recommended actions, you can start to take steps to reduce your risk over time.
+Because the dashboard is based on existing Calico Cloud data, no configuration is required.
+You can start improving the security posture of your Kubernetes cluster immediately.
+
+For more information, see [Security Posture Overview dashboard](../threat/security-posture-overview.mdx)
+
+#### Support for RKE2
+
+This release comes with support for connecting RKE2 clusters to Calico Cloud.
+
+For more information, see the [requirements for RKE2](../get-started/connect/requirements/rke2.mdx)
+
+### Known issues
+
+* You can't connect RKE2 clusters to Calico Cloud if you enabled the Image Assurance runtime view feature on any of your managed clusters.
+  As a workaround, disable runtime view before connecting your RKE2 cluster.
+
+### Bug fixes
+
+* Code changes to the Kubernetes controller-runtime led to intermittent errors in how the Container Threat Detection status was displayed in Manager UI.
+We modified the Runtime Security operator to account for these changes.
+
 ## November 29, 2023 (version 18.1.0)
 
 ### New features and enhancements
