--- a/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/aws.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/aws.mdx
@@ -69,7 +69,7 @@ To use kOps to create a cluster with {{prodname}} networking and network policy:
 
    :::note
 
-   The name of the cluster must be chosen as a valid DNS name belonging to the root user. It can either be a subdomain of an existing domain name or a subdomain which can be configured on AWS Route 53 service. More details on DNS domain requirements on the `kops` command can be found here: [https://kops.sigs.k8s.io/getting_started/commands/).
+   The name of the cluster must be chosen as a valid DNS name belonging to the root user. It can either be a subdomain of an existing domain name or a subdomain, which can be configured on AWS Route 53 service.
 
    :::
 
