--- a/calico-cloud_versioned_docs/version-18-2/get-started/connect/requirements/aks.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/get-started/connect/requirements/aks.mdx
@@ -40,6 +40,24 @@ For help in the Azure portal, see [Azure CNI](https://docs.microsoft.com/en-us/a
 
 Verify that your user account has IAM permissions to create Kubernetes ClusterRoles, ClusterRoleBindings, Deployments, Service Accounts, and Custom Resource Definitions. The easiest way to grant permissions is to assign the "Kubernetes Service Cluster Admin Role” to your user account. For help, see [AKS access control](https://docs.microsoft.com/en-us/azure/aks/control-kubeconfig-access).
 
+## Verify AddonManager is compatible
+
+If the AKS cluster already has Calico installed and is managed by AKS it may still be compatible with {{prodname}}.
+If output from the following command includes "EnsureExists" then the install is compatible with {{prodname}}.
+
+```bash
+kubectl get CustomResourceDefinition installations.operator.tigera.io -o yaml | grep ' addonmanager.kubernetes.io/mode:'
+```
+
+:::note
+
+If the command output does not include "EnsureExists" and you are on a recent version of AKS your cluster might still be compatible.
+Please click the question icon in Manager UI under the user icon in the upper right to get help from Support:
+
+![contact-support](/img/calico-cloud/contact-support.png)
+
+:::
+
 ## Need help connecting your cluster?
 
 [Troubleshooting checklist](../checklist.mdx)
